...
        android:text="MyRestaurants"
        android:textColor="@color/colorTextIcons"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="244dp"
        android:background="@color/colorTextIcons"
        android:ems="10"
        android:hint="Enter Zip Code"
        android:inputType="text"
...
